feat: Enhance JobManager to support command execution with concurrency control; improve JsonStore for append-only logging and audit management